--- a/LeposWPF/MainWindow.xaml
+++ b/LeposWPF/MainWindow.xaml
@@ -1,12 +1,325 @@
-﻿<Window x:Class="Lepos.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Lepos"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+﻿<Controls:MetroWindow x:Class="LeposWPF.MainWindow"
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      xmlns:fa="http://schemas.fontawesome.io/icons/"
+                      xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      Title="Home"
+                      Width="1150"
+                      Height="768"
+                      FontSize="16"
+                      FontWeight="Bold"
+                      WindowStartupLocation="CenterOwner"
+                      Loaded="MetroWindow_Loaded"
+                      WindowState="Maximized">
+    <Window.Resources>
+        <Style x:Key="largeTileStyle" TargetType="mah:Tile">
+            <Setter Property="Width" Value="275" />
+            <Setter Property="Height" Value="125" />
+            <Setter Property="TitleFontSize" Value="15" />
+        </Style>
+
+        <Style x:Key="mediumTileStyle" TargetType="mah:Tile">
+            <Setter Property="Width" Value="175" />
+            <Setter Property="Height" Value="125" />
+            <Setter Property="TitleFontSize" Value="15" />
+        </Style>
+        <Style x:Key="littleTileStyle" TargetType="mah:Tile">
+            <Setter Property="Width" Value="125" />
+            <Setter Property="Height" Value="125" />
+            <Setter Property="TitleFontSize" Value="15" />
+        </Style>
+    </Window.Resources>
+    <Grid HorizontalAlignment="Stretch"
+          VerticalAlignment="Stretch">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="200*" />
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0" HorizontalAlignment="Center"
+                            VerticalAlignment="Center">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="140" />
+                <ColumnDefinition Width="70*" />
+                <ColumnDefinition Width="70" />
+                <ColumnDefinition Width="70" />
+                <ColumnDefinition Width="70" />
+                <ColumnDefinition Width="70" />
+            </Grid.ColumnDefinitions>
+
+            <Image Name="logoImage"
+                   Grid.Column="0"
+                   Margin="20"
+                   Stretch="Fill"
+                   ToolTip="Logo" Source="LocalResources/default_logo.png" />
+
+            <Grid Grid.Column="1"
+                  Margin="6"
+                  VerticalAlignment="Center">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+
+                <Grid Name="revisionReleasedStackPanel" Grid.Row="0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition  />
+                    </Grid.ColumnDefinitions>
+                    <fa:FontAwesome Name="revisionReleasedFontAwesome"
+                                    Grid.Column="0"
+                                    Grid.Row="0"
+                                    FontSize="20"
+                                    Foreground="Gray"
+                                    Text="Lepos Punto de Venta" />
+
+                    <fa:FontAwesome Grid.Column="0"
+                                    Grid.Row="1"
+                                    FontSize="20"
+                                    Foreground="Red"
+                                    Text="Versión Actual: 2.0.1" />
+
+                    <!--  Users  -->
+                        <Label Grid.Column="1"
+                               Grid.Row="0"
+                               Margin="50,0,0,0"
+                               HorizontalAlignment="Left"
+                               Content="Usuario: "
+                               IsEnabled="False" />
+                        <ComboBox Name="usersComboBox"
+                                  Grid.Column="2"
+                                  Grid.Row="0"
+                                  Cursor="Hand"
+                                  IsEnabled="False"
+                                  IsReadOnly="True"
+                                  SelectedIndex="0">
+                            <ComboBoxItem >Administrator</ComboBoxItem>
+                        </ComboBox>
+                    <Label Name="dateLabel" 
+                               Grid.Column="1"
+                               Grid.Row="1"
+                               Margin="50,0,0,0"
+                               HorizontalAlignment="Left"
+                               Content="Fecha: "
+                               IsEnabled="False" />
+                </Grid>
+            </Grid>
+
+            <!--  Settings  -->
+            <Button Name="settingsButton"
+                    Grid.Column="2"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Background="Transparent"
+                    
+                    Cursor="Hand"
+                    ToolTip="Settings">
+                <Button.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Name="menuItemSettings"
+                                  
+                                  Command="{Binding OnOpen}"
+                                  Header="General Settings" />
+
+                        <Separator />
+
+                        <MenuItem Name="menuItemBranchSettings"
+                                  
+                                  Command="{Binding OnOpen}"
+                                  Header="Branch Settings" />
+                    </ContextMenu>
+                </Button.ContextMenu>
+
+                <fa:ImageAwesome Width="48"
+                                 Height="48"
+                                 HorizontalAlignment="Center"
+                                 Icon="Cog" />
+            </Button>
+
+           
+            <Button Name="aboutButton"
+                    Grid.Column="3"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Background="Transparent"
+                    Cursor="Hand"
+                    ToolTip="About">
+                <fa:ImageAwesome Width="48"
+                                 Height="48"
+                                 Icon="Info" />
+            </Button>
+
+            <Button Name="exitButton"
+                    Click="exitButton_Click"
+                    Grid.Column="4"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Background="Transparent"
+                    Cursor="Hand"
+                    ToolTip="Exit">
+                <fa:ImageAwesome Width="48"
+                                 Height="48"
+                                 Icon="PowerOff" />
+            </Button>
+
+        </Grid>
+
+        <Grid Grid.Row="1">
+            <WrapPanel 
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center">
+                <!--  Nueva Venta  -->
+                <Button Name="nuevaVentaButton"
+                        Margin="6"
+                        Background="DarkBlue"
+                        Cursor="Hand">
+                    <mah:Tile Title="Nueva Venta"
+                              Background="DarkBlue"
+                              Style="{StaticResource mediumTileStyle}">
+                        <mah:Tile.Content>
+                            <fa:ImageAwesome Width="48"
+                                             Height="48"
+                                             Margin="6"
+                                             HorizontalAlignment="Center"
+                                             Foreground="White"
+                                             Icon="CodeFork" />
+                        </mah:Tile.Content>
+                    </mah:Tile>
+                </Button>
+
+                <!--  Nueva Compra  -->
+                <Button Name="nuevaCompraButton"
+                        Margin="6"
+                        Background="Green"
+                        Cursor="Hand">
+                    <mah:Tile Title="Nueva Compra"
+                              Background="Green"
+                              Style="{StaticResource largeTileStyle}">
+                        <mah:Tile.Content>
+                            <fa:ImageAwesome Width="48"
+                                             Height="48"
+                                             Margin="6"
+                                             HorizontalAlignment="Center"
+                                             Foreground="White"
+                                             Icon="Download" />
+                        </mah:Tile.Content>
+                    </mah:Tile>
+                </Button>
+
+                <!--  Nuevo Apartado  -->
+                <Button Name="nuevoApartadoButton"
+                        Margin="6"
+                        Background="Chocolate"
+                        Cursor="Hand">
+                    <mah:Tile Title="Nuevo Apartado"
+                              Background="Chocolate"
+                              Style="{StaticResource largeTileStyle}">
+                        <mah:Tile.Content>
+                            <fa:ImageAwesome Width="48"
+                                             Height="48"
+                                             Margin="6"
+                                             HorizontalAlignment="Center"
+                                             Foreground="White"
+                                             Icon="ClockOutline" />
+                        </mah:Tile.Content>
+                    </mah:Tile>
+                </Button>
+
+                <!--  Ver Caja  -->
+                <Button Name="verCajaButton"
+                        Margin="6"
+                        Background="DodgerBlue"
+                        Cursor="Hand">
+                    <mah:Tile Title="Ver Caja"
+                              Background="DodgerBlue"
+                              Style="{StaticResource largeTileStyle}">
+                        <mah:Tile.Content>
+                            <fa:ImageAwesome Width="48"
+                                             Height="48"
+                                             Margin="6"
+                                             HorizontalAlignment="Center"
+                                             Foreground="White"
+                                             Icon="Cube" />
+                        </mah:Tile.Content>
+                    </mah:Tile>
+                </Button>
+
+                <!--  Hidden Button-->
+                <Button Name="hiddenButton"
+                        Margin="6"
+                        Visibility="Hidden">
+                    <mah:Tile 
+                              Style="{StaticResource largeTileStyle}">
+                    </mah:Tile>
+                </Button>
+
+                <!--  Historial  -->
+                <Button Name="historialButton"
+                        Margin="6"
+                        Background="Purple"
+                        Cursor="Hand">
+                    <mah:Tile Title="Historial"
+                              Background="Purple"
+                              Style="{StaticResource largeTileStyle}">
+                        <mah:Tile.Content>
+                            <fa:ImageAwesome Width="48"
+                                             Height="48"
+                                             Margin="6"
+                                             HorizontalAlignment="Center"
+                                             Foreground="White"
+                                             Icon="Upload" />
+                        </mah:Tile.Content>
+                    </mah:Tile>
+                </Button>
+
+                <!--  Deudas  -->
+                <Button Name="deudasButton"
+                        Margin="6"
+                        Background="Firebrick"
+                        Cursor="Hand">
+                    <mah:Tile Title="Deudas"
+                              Background="Firebrick"
+                              Style="{StaticResource mediumTileStyle}">
+                        <mah:Tile.Content>
+                            <fa:ImageAwesome Width="48"
+                                             Height="48"
+                                             Margin="6"
+                                             HorizontalAlignment="Center"
+                                             Foreground="White"
+                                             Icon="Ambulance" />
+                        </mah:Tile.Content>
+                    </mah:Tile>
+                </Button>
+
+                <!--  Reportes  -->
+                <Button Name="reportesButton"
+                        Margin="6"
+                        Background="DarkRed"
+                        Cursor="Hand">
+                    <mah:Tile Title="Reportes"
+                              Background="DarkRed"
+                              Style="{StaticResource largeTileStyle}">
+                        <mah:Tile.Content>
+                            <fa:ImageAwesome Width="48"
+                                             Height="48"
+                                             HorizontalAlignment="Center"
+                                             Foreground="White"
+                                             Icon="BarChart" />
+                        </mah:Tile.Content>
+                    </mah:Tile>
+                </Button>
+            </WrapPanel>
+
+        </Grid>
+
     </Grid>
-</Window>
+
+</Controls:MetroWindow>
