--- a/LeposWPF/SplashScreen/SplashLoadingWindow.xaml
+++ b/LeposWPF/SplashScreen/SplashLoadingWindow.xaml
@@ -3,25 +3,16 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:LEPOSWPF.SplashScreen"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="Loading Kraken" Height="236" Width="414" WindowStartupLocation="CenterScreen" 
-        ShowInTaskbar="False" ResizeMode="NoResize" WindowStyle="None">
-    <Controls:MetroWindow.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Amber.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </Controls:MetroWindow.Resources>
-    <Grid>
+        Title="Loading Lepos" 
+        Height="236" Width="414" WindowStartupLocation="CenterScreen" 
+        ShowInTaskbar="False" ResizeMode="NoResize" WindowStyle="None"
+        Background="White">
+    <Grid >
         <Image Name="wODPBSGBSInfoCellImage"
                    Grid.Column="0"
                    Stretch="None" />
         <Label Margin="19,2,17,80" 
-               Name="titleLabel" FontSize="31" HorizontalContentAlignment="Center" VerticalContentAlignment="Top" Foreground="Orange">
+               Name="titleLabel" FontSize="31" HorizontalContentAlignment="Center" VerticalContentAlignment="Top" Foreground="DarkBlue">
             LEPOS Point of Sale
         </Label>
         <TextBlock Height="28" Margin="33,0,26,25" Name="progressTextBlock" VerticalAlignment="Bottom"
