--- a/LeposWPF/UI/LocalStyles.xaml
+++ b/LeposWPF/UI/LocalStyles.xaml
@@ -1,41 +1,60 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:fa="http://schemas.fontawesome.io/icons/"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
 >
+    <Style x:Key="styleFontAwesome" TargetType="fa:FontAwesome">
+        <Setter Property="Margin" Value="6" />
+        <Setter Property="FontSize" Value="13" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+    </Style>
 
+    <Style x:Key="styleImageAwesome" TargetType="fa:ImageAwesome">
+        <Setter Property="Margin" Value="6" />
+        <Setter Property="MaxHeight" Value="14" />
+    </Style>
+    
     <Style x:Key="dataGridCellStyle" TargetType="DataGridCell">
+        <Setter Property="FontSize" Value="23" />
         <Style.Triggers>
             <Trigger Property="DataGridCell.IsSelected" Value="False">
                 <Setter Property="BorderBrush" Value="Gray" />
                 <Setter Property="Foreground" Value="Black" />
+                <Setter Property="FontSize" Value="23" />
             </Trigger>
             <Trigger Property="DataGridCell.IsSelected" Value="True">
                 <Setter Property="BorderBrush" Value="Gray" />
                 <Setter Property="Foreground" Value="Black" />
                 <Setter Property="Background" Value="#F9DA9D" />
+                <Setter Property="FontSize" Value="23" />
             </Trigger>
         </Style.Triggers>
     </Style>
     <Style x:Key="dataGridRowStyle" TargetType="{x:Type DataGridRow}">
+        <Setter Property="FontSize" Value="23" />
         <Setter Property="BorderBrush" Value="Gray" />
         <Setter Property="BorderThickness" Value="1" />
         <Style.Triggers>
             <Trigger Property="AlternationIndex" Value="0">
                 <Setter Property="Background" Value="White" />
+                <Setter Property="FontSize" Value="23" />
             </Trigger>
             <Trigger Property="AlternationIndex" Value="1">
                 <Setter Property="Background" Value="Gainsboro" />
+                <Setter Property="FontSize" Value="23" />
             </Trigger>
             <Trigger Property="IsSelected"
                         Value="True">
                 <Setter Property="Background"
                         Value="#F9DA9D" />
+                <Setter Property="FontSize" Value="23" />
             </Trigger>
             <Trigger Property="IsMouseOver"
                          Value="True">
                 <Setter Property="Background"
                             Value="#F9DA9D" />
+                <Setter Property="FontSize" Value="23" />
             </Trigger>
         </Style.Triggers>
     </Style>
