--- a/LeposWPF/UI/AccountStatus.xaml
+++ b/LeposWPF/UI/AccountStatus.xaml
@@ -32,13 +32,13 @@
         </VisualBrush>
 
     </Window.Resources>
-    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
+    <Grid  >
         <Grid.RowDefinitions>
             <RowDefinition Height="14*" />
             <RowDefinition Height="76*"/>
             <RowDefinition Height="10*" />
         </Grid.RowDefinitions>
-        <Viewbox HorizontalAlignment="Left">
+        <Viewbox HorizontalAlignment="Left" VerticalAlignment="Stretch">
             <Border HorizontalAlignment="Stretch"  VerticalAlignment="Stretch" Margin="2,0,2,0" Grid.Row="0" Grid.ColumnSpan="2" BorderBrush="Gray" BorderThickness="0,0,0,0">
                 <GroupBox Header="Filtrar estado de cuenta"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                     <Grid Name="groupBoxGrid"  HorizontalAlignment="Stretch">
@@ -61,7 +61,7 @@
                                Source="/Lepos;component/LocalResources/default_logo.png" />
                         <StackPanel Grid.Row="0" Grid.ColumnSpan="3" Orientation="Vertical">
                             <StackPanel Margin="10,0,0,0" Orientation="Horizontal">
-                                <TextBox  Name="saleIDTextBox" Height="30"  Width="100">
+                                <TextBox Name="saleIDTextBox" Height="30"  Width="100">
                                     <TextBox.Style>
                                         <Style TargetType="TextBox">
                                             <Style.Triggers>
@@ -89,10 +89,11 @@
                                 </Button>
                             </StackPanel>
                             <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
-                                <Label Foreground="Gray">Inicio -</Label>
-                                <DatePicker Focusable="False"  Margin="10,0,0,0" Name="purchasesStartDatePicker"></DatePicker>
-                                <Label Margin="10,0,0,0" Foreground="Gray">Fin -</Label>
-                                <Button Name="filterButton" Click="filterButton_Click" Margin="10,0,0,0">
+                                <Label Margin="10,0,10,0" Foreground="Gray">Inicio -</Label>
+                                <DatePicker Focusable="False"  Margin="10,0,10,0" Name="purchasesStartDatePicker"></DatePicker>
+                                <Label Margin="10,0,10,0" Foreground="Gray">Fin -</Label>
+                                <DatePicker Focusable="False"  Margin="10,0,10,0" Name="purchasesEndDatePicker"></DatePicker>
+                                <Button Name="filterButton" Click="filterButton_Click" Margin="0,0,0,0">
                                     <StackPanel Orientation="Horizontal">
                                         <fa:ImageAwesome Style="{StaticResource styleImageAwesome}" Icon="Search" />
                                         <fa:FontAwesome Style="{StaticResource styleFontAwesome}" Text="Filtrar" />
