--- a/LeposWPF/UI/Controls/EraseData.xaml
+++ b/LeposWPF/UI/Controls/EraseData.xaml
@@ -35,12 +35,15 @@
                 </DockPanel>
             </Border>
             <Label Grid.Row="1" Grid.Column="0" Content="Catálogo a borrar:" Foreground="gray"  />
-            <ComboBox Margin="6" MaxWidth="220" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" x:Name="catalogComboBox" />
+            <ComboBox Margin="6" MaxWidth="220" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" x:Name="catalogComboBox" >
+                <ComboBoxItem Content="Compras" IsSelected="True" HorizontalAlignment="Left" Width="188.666666666667"/>
+                <ComboBoxItem Content="Ventas" HorizontalAlignment="Left" Width="188.666666666667"/>
+            </ComboBox>
             <Label Grid.Row="2" Grid.Column="0" Content="Fecha Inicial:" Foreground="gray" />
             <DatePicker Margin="6" MaxWidth="220" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="2" x:Name="startDatePicker" Focusable="False"/>
             <Label Grid.Row="3" Grid.Column="0" Content="Fecha Fin:" Foreground="gray"  />
             <DatePicker Margin="6" MaxWidth="220" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="3" x:Name="endDatePicker" Focusable="False"/>
-            <TextBlock TextAlignment="Center" Grid.Row="5" Grid.Column="2" TextWrapping="Wrap" Name="errorTextBlock" Foreground="Red" Text="error" />
+            <TextBlock TextAlignment="Center" Grid.Row="5" Grid.Column="2" TextWrapping="Wrap" Name="messageTextBlock" Foreground="Red" Text="" />
             <Button Margin="6" Grid.Column="0" Grid.Row="5" Name="cancelButton" Click="cancelButton_Click"  Content="Cancelar"/>
             <Button Margin="6" Grid.Column="1" Grid.Row="5" Name="saveButton" Click="saveButton_Click"  Content="Guardar"/>
             <Image Name="logoImage"
