--- a/LeposWPF/UI/NewSale.xaml
+++ b/LeposWPF/UI/NewSale.xaml
@@ -2,6 +2,7 @@
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      xmlns:wpfTool="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                       xmlns:fa="http://schemas.fontawesome.io/icons/"
                       xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
@@ -16,7 +17,7 @@
                       FontWeight="Bold"
                       WindowStartupLocation="CenterOwner"
                       WindowState="Maximized"
-                      KeyDown="MetroWindow_KeyDown"
+                      KeyUp="MetroWindow_KeyUp"
                       Loaded="MetroWindow_Loaded"
                       >
     <Window.Resources>
@@ -48,14 +49,14 @@
                     <ColumnDefinition Width="10*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <TextBlock Margin="5,0,5,0"  Foreground="Gray" Grid.Row="0" Grid.ColumnSpan="3">Ingresar Producto (F5) :</TextBlock>
-                <TextBox FontSize="23" Foreground="Gray" Margin="5,0,5,0" Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Stretch"/>
+                <TextBox Name="searchTextBox" KeyDown="searchTextBox_KeyDown" FontSize="23" Foreground="Gray" Margin="5,0,5,0" Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Stretch"/>
                 <ProgressBar Grid.Row="2" Grid.Column="0" Name="loadingProgressBar"
                              Margin="5"
                              HorizontalAlignment="Stretch"
                              VerticalAlignment="Stretch"
                              IsIndeterminate="False"
                              />
-                <TextBlock FontSize="18" Foreground="Red" IsEnabled="False" TextWrapping="Wrap" Grid.Row="2" Grid.Column="1" Name="alertTextBox" HorizontalAlignment="Stretch" />
+                <TextBlock FontSize="18" Foreground="Red" IsEnabled="False" TextWrapping="Wrap" Grid.Row="2" Grid.Column="1" Name="alertTextBlock" HorizontalAlignment="Stretch" />
                 <Image Name="logoImage"
                            Grid.Column="2"
                            Grid.RowSpan="3"
@@ -75,35 +76,63 @@
                     <ColumnDefinition Width="20*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <DataGrid Name="saleDataGrid" 
+                          KeyUp="saleDataGrid_KeyUp"
+                          CanUserAddRows="False"
                           BorderBrush="Gray"
                           BorderThickness="2"
-                      Margin="6,0,6,0"
-                      Grid.Column="0"
-                      MaxColumnWidth="200"
-                      HorizontalAlignment="Stretch"
-                      VerticalAlignment="Stretch"/>
+                          Margin="6,0,6,0"
+                          Grid.Column="0"
+                          MaxColumnWidth="200"
+                          HorizontalAlignment="Stretch"
+                          VerticalAlignment="Stretch" >
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Binding="{Binding ID}" MaxWidth="150"  IsReadOnly="True" Header="Producto"></DataGridTextColumn>
+                        <DataGridTextColumn Binding="{Binding Description}" MaxWidth="450" IsReadOnly="True" Header="Descripción"></DataGridTextColumn>
+                        <DataGridTextColumn Binding="{Binding Quantity}" MaxWidth="150" IsReadOnly="True" Header="Cantidad"></DataGridTextColumn>
+                        <DataGridTextColumn Binding="{Binding Price, StringFormat=C}" MaxWidth="150" IsReadOnly="True" Header="Precio"></DataGridTextColumn>
+                        <DataGridTextColumn Binding="{Binding Amount, StringFormat=C}" MaxWidth="150" IsReadOnly="True" Header="Importe"></DataGridTextColumn>
+                        <DataGridTemplateColumn MaxWidth="150" Header="Remover">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Image Tag="{Binding ID}" Name="removeImage" MouseDown="removeImage_MouseDown" Width="32" Height="32" Source="/Lepos;component/LocalResources/cancel.png"  />
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
                 <Grid  Margin="20,0,6,0" Name="controlGrid" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="8*"></RowDefinition>
                         <RowDefinition Height="8*"></RowDefinition>
-                        <RowDefinition Height="8*"></RowDefinition>
-                        <RowDefinition Height="8*"></RowDefinition>
+                        <RowDefinition Height="17*"></RowDefinition>
+                        <RowDefinition Height="17*"></RowDefinition>
                         <RowDefinition Height="17*"></RowDefinition>
                         <RowDefinition Height="22*"></RowDefinition>
-                        <RowDefinition Height="17*"></RowDefinition>
                         <RowDefinition Height="12*"></RowDefinition>
+                        <RowDefinition Height="12*"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition ></ColumnDefinition>
                         <ColumnDefinition ></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <Border BorderBrush="Gray" BorderThickness="0 0 2 2" Grid.Row="0" Grid.Column="0">
+                        <TextBlock Margin="3,6,3,6"
+                                   Text="IVA:">
+                        </TextBlock>
+                    </Border>
+                    <Border BorderBrush="Gray" BorderThickness="2 0 0 2" Grid.Row="0" Grid.Column="1">
+                        <TextBlock TextWrapping="Wrap" Name="typeIVATextBlock"></TextBlock>
+                    </Border>
+                    <Border BorderBrush="Gray" BorderThickness="0 0 2 2" Grid.Row="1" Grid.Column="0">
                         <TextBlock 
                             Margin="3,6,3,6" 
                             Text="Cliente:">
                         </TextBlock>
                     </Border>
-                    <Border BorderBrush="Gray" BorderThickness="2 0 0 2" Grid.Row="0" Grid.Column="1">
+                    <Border BorderBrush="Gray" BorderThickness="2 0 0 2" Grid.Row="1" Grid.Column="1">
                         <ComboBox 
                                 HorizontalAlignment="Stretch" 
                                 VerticalAlignment="Stretch" 
@@ -112,32 +141,26 @@
                                 >
                         </ComboBox>
                     </Border>
-                    <Border BorderBrush="Gray" BorderThickness="0 0 2 2" Grid.Row="1" Grid.Column="0">
-                        <TextBlock Margin="3,6,3,6"
-                                   Text="IVA:">
-                        </TextBlock>
-                    </Border>
-                    <Border BorderBrush="Gray" BorderThickness="2 0 0 2" Grid.Row="1" Grid.Column="1">
-                        <ComboBox 
-                            SelectionChanged="ivaComboBox_SelectionChanged" 
-                            Name="ivaComboBox" 
-                            Margin="3,6,3,6">
-                        </ComboBox>
-                    </Border>
                     <Border BorderBrush="Gray" BorderThickness="0 0 2 2" Grid.Row="2" Grid.Column="0">
                         <RadioButton IsChecked="True" 
+                                     Checked="saleRadioButton_Checked"
                                      Name="liquidRadioButton"
                                      Margin="3,6,3,6" 
                                      HorizontalAlignment="Stretch" 
-                                     VerticalAlignment="Stretch" >Contado
+                                     VerticalAlignment="Stretch" 
+                                     GroupName="Sell" >Contado
                         </RadioButton>
                     </Border>
                     <Border BorderBrush="Gray" BorderThickness="2 0 0 2" Grid.Row="2" Grid.Column="1">
                         <RadioButton Margin="3,6,3,6"
-                                     Name="creditRadioButton">Crédito</RadioButton>
+                                     Checked="saleRadioButton_Checked"
+                                     Name="creditRadioButton"
+                                     HorizontalAlignment="Stretch" 
+                                     VerticalAlignment="Stretch" 
+                                     GroupName="Sell" >Crédito</RadioButton>
                     </Border>
                     <Border BorderBrush="Gray" BorderThickness="0 0 2 2" Grid.Row="3" Grid.Column="0">
-                        <CheckBox Margin="3,6,3,6"
+                        <CheckBox Margin="3,6,3,6" Unchecked="wholesaleCheckBox_Checked" Checked="wholesaleCheckBox_Checked"
                                   Name="wholesaleCheckBox">Mayoreo</CheckBox>
                     </Border>
                     <Border BorderBrush="Gray" BorderThickness="2 0 0 2" Grid.Row="3" Grid.Column="1">
@@ -146,15 +169,32 @@
                             <TextBlock TextWrapping="Wrap">Imprimir Ticket</TextBlock>
                         </CheckBox>
                     </Border>
-                    <Border BorderBrush="Gray" BorderThickness="0 0 0 2" Grid.ColumnSpan="2" Grid.Row="4" >
+                    <Border BorderBrush="Gray" BorderThickness="0 0 2 2" Grid.Row="4" Grid.Column="0">
+                        <TextBlock 
+                            Margin="3,6,3,6" 
+                            Text="% Descuento:">
+                        </TextBlock>
+                    </Border>
+                    <Border BorderBrush="Gray" BorderThickness="2 0 0 2" Grid.Row="4" Grid.Column="1">
+                        <wpfTool:IntegerUpDown Name="discountIntegerUpDown" ValueChanged="discountIntegerUpDown_ValueChanged" AllowTextInput="False" Value="0"></wpfTool:IntegerUpDown>
+                    </Border>
+
+                    <Border Name="ivaBorder" BorderBrush="Gray" BorderThickness="0 0 0 2" Grid.ColumnSpan="2" Grid.Row="5" >
+                        <TextBlock FontSize="30" 
+                                   Name="ivaTextBlock" 
+                                   Margin="3,6,3,6"
+                                   TextWrapping="Wrap"
+                                   Text="IVA:"></TextBlock>
+                    </Border>
+                    <Border BorderBrush="Gray" BorderThickness="0 0 0 2" Grid.ColumnSpan="2" Grid.Row="6" >
                         <TextBlock FontSize="30" 
                                    Name="subTotalTextBlock" 
                                    Margin="3,6,3,6"
                                    TextWrapping="Wrap"
                                    Text="Subtotal:"></TextBlock>
                     </Border>
-                    <Border BorderBrush="Gray" BorderThickness="0 0 0 2" Grid.ColumnSpan="2" Grid.Row="5">
-                        <TextBlock FontSize="40" 
+                    <Border BorderBrush="Gray" BorderThickness="0 0 0 2" Grid.ColumnSpan="2" Grid.Row="7">
+                        <TextBlock FontSize="32" 
                                    Foreground="Red" 
                                    TextWrapping="Wrap" 
                                    Name="totalTextBlock" 
@@ -162,21 +202,30 @@
                                    Text="Total : ">
                         </TextBlock>
                     </Border>
-                    <Border BorderBrush="Gray" BorderThickness="0 0 2 2" Grid.Row="6" Grid.Column="0">
+                    <Border Name="cashBorder" BorderBrush="Gray" BorderThickness="0 0 2 2" Grid.Row="8" Grid.Column="0">
                         <TextBlock Margin="3,6,3,6"
                                    FontSize="22"
-                                   Text="Recibo:">
+                                   Text="Recibo (F6):">
                         </TextBlock>
                     </Border>
-                    <Border BorderBrush="Gray" BorderThickness="2 0 0 2" Grid.Row="6" Grid.Column="1">
-                        <TextBox Name="moneyTextBox" FontSize="22"></TextBox>
+                    <Border Name="cashTextBoxBorder" BorderBrush="Gray" BorderThickness="2 0 0 2" Grid.Row="8" Grid.Column="1">
+                        <TextBox KeyDown="moneyTextBox_KeyDown" Name="moneyTextBox" FontSize="22"></TextBox>
+                    </Border>
+                    <Border Name="changeBorder" BorderBrush="Gray" BorderThickness="0 0 2 2" Grid.Row="9" Grid.Column="0">
+                        <TextBlock Margin="3,6,3,6"
+                                   FontSize="22"
+                                   Text="Cambio:">
+                        </TextBlock>
+                    </Border>
+                    <Border Name="changeTextBoxBorder" BorderBrush="Gray" BorderThickness="2 0 0 2" Grid.Row="9" Grid.Column="1">
+                        <TextBox Name="changeTextBox" IsEnabled="False" FontSize="22"></TextBox>
                     </Border>
 
-                    <Border BorderBrush="Gray" BorderThickness="0 0 0 0" Grid.Row="7" Grid.ColumnSpan="2" >
-                        <Button Click="saleButton_Click" 
+                    <Border BorderBrush="Gray" BorderThickness="0 0 0 0" Grid.Row="10" Grid.ColumnSpan="2" >
+                        <Button Click="creditButton_Click" 
                                 Margin="20,10,20,10" 
-                                Name="saleButton" 
-                                Content="COBRAR (F6)" 
+                                Name="creditButton" 
+                                Content="Venta (F6)" 
                                 HorizontalAlignment="Stretch" 
                                 TextBlock.FontSize="24"
                                 TextBlock.TextAlignment="Center">
