--- a/LeposWPF/UI/CreditRecord.xaml
+++ b/LeposWPF/UI/CreditRecord.xaml
@@ -19,12 +19,69 @@
                       WindowState="Maximized"
                       >
     <Window.Resources>
+        <!--  Alert Fade Animation  -->
+        <Storyboard x:Key="animate">
+
+            <DoubleAnimation Duration="0:0:3.5"
+                             From="1"
+                             Storyboard.TargetProperty="Opacity"
+                             To="0" />
+        </Storyboard>
+        <DataTemplate x:Key="ViewCellTemplate">
+            <TextBlock Name="viewTextBlock" Tag="{Binding Path=ID}" Text="Ver" MouseDown="viewTextBlock_MouseDown" />
+        </DataTemplate>
+        <DataTemplate x:Key="ViewEditingCellTemplate">
+            <TextBlock Name="viewTextBlock" Tag="{Binding Path=ID}" Text="Ver" MouseDown="viewTextBlock_MouseDown" />
+        </DataTemplate>
+        <DataTemplate x:Key="DateCellTemplate">
+            <TextBlock TextAlignment="Center" Text="{Binding Path=Date, StringFormat=d}"></TextBlock>
+        </DataTemplate>
+
+        <DataTemplate x:Key="DateCellEditingTemplate">
+            <TextBlock TextAlignment="Center" Text="{Binding Path=Date, StringFormat=c}"></TextBlock>
+        </DataTemplate>
+        <DataTemplate x:Key="PayDateCellTemplate">
+            <TextBlock TextAlignment="Center" Text="{Binding Path=PayDate, StringFormat=d}"></TextBlock>
+        </DataTemplate>
+
+        <DataTemplate x:Key="PayDateCellEditingTemplate">
+            <TextBlock TextAlignment="Center" Text="{Binding Path=PayDate, StringFormat=c}"></TextBlock>
+        </DataTemplate>
+        <DataTemplate x:Key="PayCellTemplate">
+            <TextBlock Tag="{Binding Path=ID}" Text="Abonar" MouseDown="payTextBlock_MouseDown" />
+        </DataTemplate>
+
+        <DataTemplate x:Key="PayCellEditingTemplate">
+            <TextBlock Tag="{Binding Path=ID}" Text="Abonar" MouseDown="payTextBlock_MouseDown" />
+        </DataTemplate>
+        
+        <DataTemplate x:Key="TotalCellTemplate">
+            <TextBlock Text="{Binding Path=Total, StringFormat=c}"></TextBlock>
+        </DataTemplate>
+
+        <DataTemplate x:Key="TotalCellEditingTemplate">
+            <TextBlock Text="{Binding Path=Total, StringFormat=c}"></TextBlock>
+        </DataTemplate>
+        <DataTemplate x:Key="PaymentsCellTemplate">
+            <TextBlock Text="{Binding Path=Payments, StringFormat=c}"></TextBlock>
+        </DataTemplate>
+
+        <DataTemplate x:Key="PaymentsDCellEditingTemplate">
+            <TextBlock Text="{Binding Path=Payments, StringFormat=c}"></TextBlock>
+        </DataTemplate>
+        <DataTemplate x:Key="Provider_IDCellTemplate">
+            <TextBlock Text="{Binding Path=Provider.Name}"></TextBlock>
+        </DataTemplate>
+
+        <DataTemplate x:Key="Provider_IDCellEditingTemplate">
+            <TextBlock Text="{Binding Path=Provider.Name}"></TextBlock>
+        </DataTemplate>
     </Window.Resources>
     <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
         <Grid.RowDefinitions>
-            <RowDefinition Height="14*" />
-            <RowDefinition Height="76*"/>
-            <RowDefinition Height="10*" />
+            <RowDefinition Height="20*" />
+            <RowDefinition Height="73*"/>
+            <RowDefinition Height="7*" />
         </Grid.RowDefinitions>
         <Viewbox HorizontalAlignment="Left">
             <Border HorizontalAlignment="Stretch"  VerticalAlignment="Stretch" Margin="2,0,2,0" Grid.Row="0" Grid.ColumnSpan="2" BorderBrush="Gray" BorderThickness="0,0,0,0">
@@ -37,6 +94,7 @@
                             <ColumnDefinition Width="100"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
+                            <RowDefinition></RowDefinition>
                             <RowDefinition></RowDefinition>
                             <RowDefinition></RowDefinition>
                         </Grid.RowDefinitions>
@@ -61,6 +119,15 @@
                         </StackPanel>
                         <TextBlock Margin="6,10,6,0" Grid.Column="0" Grid.Row="1" Background="Yellow" Foreground="Gray">Fecha próxima de pago</TextBlock>
                         <TextBlock Margin="6,10,6,0" Grid.Column="1" Grid.Row="1" Background="Red" Foreground="Black" >Fecha expirada de pago</TextBlock>
+                        <StackPanel Orientation ="Vertical" Grid.Row="2" Grid.ColumnSpan="2">
+                            <TextBlock FontSize="22" Foreground="Red" IsEnabled="False" TextWrapping="Wrap" Name="alertTextBlock" HorizontalAlignment="Stretch" />
+                            <ProgressBar Name="loadingProgressBar"
+                                             Margin="5"
+                                             HorizontalAlignment="Stretch"
+                                             VerticalAlignment="Stretch"
+                                             IsIndeterminate="False"
+                                             />
+                        </StackPanel>
                     </Grid>
                 </GroupBox>
             </Border>
@@ -70,11 +137,15 @@
                 <ScrollViewer 
                                   HorizontalScrollBarVisibility="Auto"
                                   VerticalScrollBarVisibility="Auto">
-                    <DataGrid Name="debtsDataGrid"
-                                      Margin="6,0,6,0"
-                                      MaxColumnWidth="200"
-                                      HorizontalAlignment="Stretch"
-                                      VerticalAlignment="Stretch">
+                    <DataGrid
+                            LoadingRow="debtsDataGrid_LoadingRow"
+                            IsReadOnly="True"
+                            Name="debtsDataGrid"
+                            CanUserAddRows="False"
+                            Margin="6,0,6,0"
+                            MaxColumnWidth="200"
+                            HorizontalAlignment="Stretch"
+                            VerticalAlignment="Stretch">
                     </DataGrid>
                 </ScrollViewer>
             </Border>
