--- a/LeposWPF/UI/CreditWindow.xaml
+++ b/LeposWPF/UI/CreditWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Controls:MetroWindow x:Class="LeposWPF.UI.ReduceDebtPurchase"
+﻿<Controls:MetroWindow x:Class="LeposWPF.UI.CreditWindow"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
@@ -7,52 +7,43 @@
                       xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                       xmlns:sys="clr-namespace:System;assembly=mscorlib"
-                      Title="Abonar a Compra"
+                      Title="Pago a crédito"
                       Height="436"
-                      Width="714"
+                      Width="814"
                       FontSize="16"
                       FontWeight="Bold"
                       WindowStartupLocation="CenterScreen"
-                      ResizeMode="CanMinimize"
-                      >
+                      ResizeMode="CanMinimize" 
+                      Loaded="MetroWindow_Loaded" 
+                    >
     <Window.Resources>
     </Window.Resources>
     <Viewbox Stretch="Uniform" Name="dataGridContainerViewBox"  HorizontalAlignment="Stretch"  VerticalAlignment="Stretch">
         <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="100"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="2*" />
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Label Grid.Row="0" Grid.Column="0" Content="Proveedor:" Foreground="gray"  />
-            <TextBox Margin="6" Width="100" Grid.Column="1" Grid.Row="0" x:Name="providerTextBox" TextAlignment="Center" />
-            <Label Grid.Row="1" Grid.Column="0" Content="Folio:" Foreground="gray"  />
-            <TextBox Margin="6" Width="100" Grid.Column="1" Grid.Row="1" x:Name="folioTextBox" TextAlignment="Center" />
-            <Label Grid.Row="2" Grid.Column="0" Content="Costo:" Foreground="gray" />
-            <TextBox Margin="6" Width="100" Grid.Column="1" Grid.Row="2" x:Name="costTextBox" TextAlignment="Center" />
-            <Label Grid.Row="3" Grid.Column="0" Content="Adeudo:" Foreground="gray"  />
-            <TextBox Margin="6" Width="100" Grid.Column="1" Grid.Row="3" x:Name="debtTextBox" TextAlignment="Center" />
-            <Label Grid.Row="4" Grid.Column="0" Content="Abonar:" Foreground="gray"  />
-            <TextBox Margin="6" Width="100" Grid.Column="1" Grid.Row="4" x:Name="paymentTextBox" TextAlignment="Center" />
-            <TextBlock TextAlignment="Center" Grid.Row="5" Grid.Column="2" TextWrapping="Wrap" Name="errorTextBlock" Foreground="Red" Text="error" />
-            <Button Margin="6" Grid.ColumnSpan="2" Grid.Row="5" Name="payButton" Click="payButton_Click"  Content="Abonar"/>
+            <TextBlock TextWrapping="Wrap" Grid.Row="0" Grid.Column="0" Text="Fecha de liquidación:" Foreground="gray"  />
+            <DatePicker Name="dateDatePicker" Margin="6" Grid.Column="1" Grid.Row="0" />
+            <Button Margin="6" Grid.ColumnSpan="2" Grid.Row="1" Name="paymentButton" Click="paymentButton_Click" Content="Continuar"/>
+            <TextBlock TextAlignment="Center" Grid.Row="2" Grid.ColumnSpan="2" TextWrapping="Wrap" Name="errorTextBlock" Foreground="Red" Height="51" Margin="0,13,0,0" Grid.RowSpan="2" />
             <Image Name="logoImage"
                    Grid.Row="0"
                    Grid.Column="2"
-                   Grid.RowSpan="5"
+                   Grid.RowSpan="2"
                    Margin="20"
                    Height="80"
                    ToolTip="Logo" 
                    Source="/Lepos;component/LocalResources/default_logo.png"
                    />
+
         </Grid>
     </Viewbox>
 
