--- a/LeposWPF/UI/PaymentsPurchase.xaml
+++ b/LeposWPF/UI/PaymentsPurchase.xaml
@@ -28,6 +28,8 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="2*" />
@@ -37,23 +39,31 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
+
                 <Label Grid.Row="0" Grid.Column="0" Content="Proveedor:" Foreground="gray"  />
-                <TextBox Margin="6" Width="100" Grid.Column="1" Grid.Row="0" x:Name="providerTextBox" TextAlignment="Center" />
-                <Label Grid.Row="1" Grid.Column="0" Content="#Compra:" Foreground="gray"  />
-                <TextBox Margin="6" Width="100" Grid.Column="1" Grid.Row="1" x:Name="purchaseIDTextBox" TextAlignment="Center" />
-                <Label Grid.Row="2" Grid.Column="0" Content="Folio:" Foreground="gray" />
-                <TextBox Margin="6" Width="100" Grid.Column="1" Grid.Row="2" x:Name="folioTextBox" TextAlignment="Center" />
-                <Label Grid.Row="3" Grid.Column="0" Content="Costo:" Foreground="gray" />
-                <TextBox Margin="6" Width="100" Grid.Column="1" Grid.Row="3" x:Name="costTextBox" TextAlignment="Center" />
-                <Label Grid.Row="4" Grid.Column="0" Content="Total Abonos:" Foreground="gray"  />
-                <TextBox Margin="6" Width="100" Grid.Column="1" Grid.Row="4" x:Name="paymentsTextBox" TextAlignment="Center" />
-                <Label Grid.Row="5" Grid.Column="0" Content="Adeudo:" Foreground="gray"  />
-                <TextBox Margin="6" Width="100" Grid.Column="1" Grid.Row="5" x:Name="debtTextBox" TextAlignment="Center" />
-               
+                <TextBox IsReadOnly="True" Margin="6" Width="100" Grid.Column="1" Grid.Row="0" x:Name="providerTextBox" TextAlignment="Center" />
+                <Label Grid.Row="1" Grid.Column="0" Content="Cajero:" Foreground="gray"  />
+                <TextBox IsReadOnly="True" Margin="6" Width="100" Grid.Column="1" Grid.Row="1" x:Name="sellerTextBox" TextAlignment="Center" />
+                <Label Grid.Row="2" Grid.Column="0" Content="#Compra:" Foreground="gray"  />
+                <TextBox IsReadOnly="True" Margin="6" Width="100" Grid.Column="1" Grid.Row="2" x:Name="purchaseIDTextBox" TextAlignment="Center" />
+                <Label Grid.Row="3" Grid.Column="0" Content="Folio:" Foreground="gray" />
+                <TextBox IsReadOnly="True" Margin="6" Width="100" Grid.Column="1" Grid.Row="3" x:Name="folioTextBox" TextAlignment="Center" />
+                <Label Grid.Row="4" Grid.Column="0" Content="Costo:" Foreground="gray" />
+                <TextBox IsReadOnly="True" Margin="6" Width="100" Grid.Column="1" Grid.Row="4" x:Name="costTextBox" TextAlignment="Center" />
+                <Label Grid.Row="5" Grid.Column="0" Content="Total Abonos:" Foreground="gray"  />
+                <TextBox IsReadOnly="True" Margin="6" Width="100" Grid.Column="1" Grid.Row="5" x:Name="paymentsTextBox" TextAlignment="Center" />
+                <Label Grid.Row="6" Grid.Column="0" Content="Adeudo:" Foreground="gray"  />
+                <TextBox IsReadOnly="True" Margin="6" Width="100" Grid.Column="1" Grid.Row="6" x:Name="debtTextBox" TextAlignment="Center" />
+                <Label Grid.Row="0" Grid.Column="2" Content="Abonar:" Foreground="gray"  />
+                <TextBox Margin="6" KeyDown="paymentTextbox_KeyDown" Width="100" Grid.Column="3" Grid.Row="0" x:Name="paymentTextBox" TextAlignment="Center" />
+                <Button Margin="6" Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="1" Name="payButton" Click="payButton_Click"  Content="Abonar"/>
+                <TextBlock TextAlignment="Center" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" TextWrapping="Wrap" Name="errorTextBlock" Foreground="Red" Text="" />
+
                 <Image Name="logoImage"
                    Grid.Row="0"
-                   Grid.Column="2"
+                   Grid.Column="4"
                    Grid.RowSpan="5"
                    Margin="20"
                    Height="80"
