--- a/LeposWPF/UI/TransactionsRecord.xaml
+++ b/LeposWPF/UI/TransactionsRecord.xaml
@@ -17,36 +17,100 @@
                       WindowState="Maximized"
                       >
     <Window.Resources>
+        <!--  Alert Fade Animation  -->
+        <Storyboard x:Key="animate">
+
+            <DoubleAnimation Duration="0:0:3.5"
+                             From="1"
+                             Storyboard.TargetProperty="Opacity"
+                             To="0" />
+        </Storyboard>
+        <DataTemplate x:Key="ViewCellTemplate">
+            <TextBlock Name="viewTextBlock" Tag="{Binding Path=ID}" Text="Ver" MouseDown="viewTextBlock_MouseDown" />
+        </DataTemplate>
+        <DataTemplate x:Key="ViewEditingCellTemplate">
+            <TextBlock Name="viewTextBlock" Tag="{Binding Path=ID}" Text="Ver" MouseDown="viewTextBlock_MouseDown" />
+        </DataTemplate>
+        <DataTemplate x:Key="DateCellTemplate">
+            <TextBlock Text="{Binding Path=Date, StringFormat=d}"></TextBlock>
+        </DataTemplate>
+
+        <DataTemplate x:Key="DateCellEditingTemplate">
+            <TextBlock Text="{Binding Path=Date, StringFormat=c}"></TextBlock>
+        </DataTemplate>
+        <DataTemplate x:Key="SubTotalCellTemplate">
+            <TextBlock Text="{Binding Path=SubTotal, StringFormat=c}"></TextBlock>
+        </DataTemplate>
+
+        <DataTemplate x:Key="SubTotalCellEditingTemplate">
+            <TextBlock Text="{Binding Path=SubTotal, StringFormat=c}"></TextBlock>
+        </DataTemplate>
+        <DataTemplate x:Key="TotalCellTemplate">
+            <TextBlock Text="{Binding Path=Total, StringFormat=c}"></TextBlock>
+        </DataTemplate>
+
+        <DataTemplate x:Key="TotalCellEditingTemplate">
+            <TextBlock Text="{Binding Path=Total, StringFormat=c}"></TextBlock>
+        </DataTemplate>
+        <DataTemplate x:Key="Client_IDCellTemplate">
+            <TextBlock Text="{Binding Path=Client.Name}"></TextBlock>
+        </DataTemplate>
+
+        <DataTemplate x:Key="Client_IDCellEditingTemplate">
+            <TextBlock Text="{Binding Path=Client.Name}"></TextBlock>
+        </DataTemplate>
+        <DataTemplate x:Key="Provider_IDCellTemplate">
+            <TextBlock Text="{Binding Path=Provider.Name}"></TextBlock>
+        </DataTemplate>
+
+        <DataTemplate x:Key="Provider_IDCellEditingTemplate">
+            <TextBlock Text="{Binding Path=Provider.Name}"></TextBlock>
+        </DataTemplate>
     </Window.Resources>
     <Grid  HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <TabControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <TabItem Header="Ventas">
+            <TabItem Name="salesTabItem" Header="Ventas">
                 <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="137*"/>
+                        <ColumnDefinition Width="1001*"/>
+                    </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="12*" />
-                        <RowDefinition Height="77*"/>
-                        <RowDefinition Height="10*" />
+                        <RowDefinition Height="20*" />
+                        <RowDefinition Height="73*"/>
+                        <RowDefinition Height="7*" />
                     </Grid.RowDefinitions>
-                    <Viewbox HorizontalAlignment="Left">
+                    <Viewbox HorizontalAlignment="Left" Grid.ColumnSpan="2" Margin="0,0,0,505.667" Grid.RowSpan="2">
                         <Border Margin="2,0,2,0" Grid.Row="0" Grid.ColumnSpan="2" BorderBrush="Gray" BorderThickness="0,0,0,0">
                             <GroupBox Header="Seleccionar Período:" Name="salesGroupBox" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                                <StackPanel Orientation="Horizontal">
-                                    <Label Foreground="Gray">Inicio - </Label>
-                                    <DatePicker Margin="10,0,0,0" Focusable="False" Name="salesStartDatePicker"></DatePicker>
-                                    <Label Margin="10,0,0,0" Foreground="Gray">Fin - </Label>
-                                    <DatePicker Margin="10,0,0,0" Focusable="False" Name="salesEndDatePicker"></DatePicker>
-                                    <Button Name="salesDetail" Click="salesDetail_Click" Content="Ver Venta"></Button>
-                                    <Button Name="payDebtSaleButton" Click="payDebtSale_Click" Content="ABONOS"></Button>
+                                <StackPanel Orientation="Vertical">
+                                    <StackPanel Orientation="Horizontal">
+                                        <Label Foreground="Gray">Inicio -</Label>
+                                        <DatePicker Margin="10,0,0,0" Focusable="False" Name="salesStartDatePicker"></DatePicker>
+                                        <Label Margin="10,0,0,0" Foreground="Gray">Fin -</Label>
+                                        <DatePicker Margin="10,0,0,0" Focusable="False" Name="salesEndDatePicker"></DatePicker>
+                                        <Button Margin="10,2,10,2" Width="100" Name="sales" Click="sales_Click" Content="Ver Ventas"></Button>
+                                    </StackPanel>
+                                    <StackPanel Orientation ="Vertical">
+                                        <TextBlock FontSize="22" Foreground="Red" IsEnabled="False" TextWrapping="Wrap" Name="salesAlertTextBlock" HorizontalAlignment="Stretch" />
+                                        <ProgressBar Name="salesProgressBar"
+                                             Margin="5"
+                                             HorizontalAlignment="Stretch"
+                                             VerticalAlignment="Stretch"
+                                             IsIndeterminate="False"
+                                             />
+                                    </StackPanel>
                                 </StackPanel>
                             </GroupBox>
                         </Border>
                     </Viewbox>
-                    <Viewbox ScrollViewer.HorizontalScrollBarVisibility="Auto" Name="dataGridContainerViewBox" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Stretch" >
+                    <Viewbox ScrollViewer.HorizontalScrollBarVisibility="Auto" Name="dataGridContainerViewBox" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Stretch" Grid.ColumnSpan="2" Margin="0,0.333,0,48.333" Grid.RowSpan="2" >
                         <Border BorderBrush="Gray" BorderThickness="0,2,0,2">
                             <ScrollViewer 
                                   HorizontalScrollBarVisibility="Auto"
                                   VerticalScrollBarVisibility="Auto">
                                 <DataGrid Name="salesDataGrid"
+                                      CanUserAddRows="False"
                                       Margin="6,0,6,0"
                                       MaxColumnWidth="200"
                                       HorizontalAlignment="Stretch"
@@ -55,7 +119,7 @@
                             </ScrollViewer>
                         </Border>
                     </Viewbox>
-                    <Viewbox Name="salesViewBox" HorizontalAlignment="Left" Grid.Row="2" >
+                    <Viewbox Name="salesViewBox" HorizontalAlignment="Left" Grid.Row="2" Grid.ColumnSpan="2" Margin="0,0.333" >
                         <Border Margin="2,2,2,2" BorderBrush="Gray" BorderThickness="0 0 0 0">
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock Name="salesTextBlock" HorizontalAlignment="Stretch" FontSize="28" TextWrapping="Wrap" Foreground="Gray">Ventas : $25,000.00</TextBlock>
@@ -70,23 +134,33 @@
                     </Viewbox>
                 </Grid>
             </TabItem>
-            <TabItem Header="Compras">
+            <TabItem Name="purchasesTabItem" Header="Compras">
                 <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="12*" />
-                        <RowDefinition Height="77*"/>
-                        <RowDefinition Height="10*" />
+                        <RowDefinition Height="20*" />
+                        <RowDefinition Height="73*"/>
+                        <RowDefinition Height="7*" />
                     </Grid.RowDefinitions>
                     <Viewbox HorizontalAlignment="Left">
                         <Border Margin="2,0,2,0" Grid.Row="0" Grid.ColumnSpan="2" BorderBrush="Gray" BorderThickness="0,0,0,0">
                             <GroupBox Header="Seleccionar Período:" Name="purchasesGroupBox" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                                <StackPanel Orientation="Horizontal">
-                                    <Label Foreground="Gray">Inicio - </Label>
-                                    <DatePicker Margin="10,0,0,0" Focusable="False" Name="purchasesStartDatePicker"></DatePicker>
-                                    <Label Margin="10,0,0,0" Foreground="Gray">Fin - </Label>
-                                    <DatePicker Margin="10,0,0,0" Focusable="False" Name="purchasesEndDatePicker"></DatePicker>
-                                    <Button Name="purchasesDetail" Click="purchasesDetail_Click" Content="Ver Compra"></Button>
-                                    <Button Name="payDebtPurchaseButton" Click="payDebtPurchaseButton_Click"> ABONOS</Button>
+                                <StackPanel Orientation="Vertical">
+                                    <StackPanel Orientation="Horizontal">
+                                        <Label Foreground="Gray">Inicio -</Label>
+                                        <DatePicker Margin="10,0,0,0" Focusable="False" Name="purchasesStartDatePicker"></DatePicker>
+                                        <Label Margin="10,0,0,0" Foreground="Gray">Fin -</Label>
+                                        <DatePicker Margin="10,0,0,0" Focusable="False" Name="purchasesEndDatePicker"></DatePicker>
+                                        <Button Margin="10,2,10,2" Width="100" Name="purchasesButton" Click="purchasesButton_Click" Content="Ver Compras"></Button>
+                                    </StackPanel>
+                                    <StackPanel Orientation ="Vertical">
+                                        <TextBlock FontSize="22" Foreground="Red" IsEnabled="False" TextWrapping="Wrap" Name="purchasesAlertTextBlock" HorizontalAlignment="Stretch" />
+                                        <ProgressBar Name="purchasesProgressBar"
+                                                 Margin="5"
+                                                 HorizontalAlignment="Stretch"
+                                                 VerticalAlignment="Stretch"
+                                                 IsIndeterminate="False"
+                                                 />
+                                    </StackPanel>
                                 </StackPanel>
                             </GroupBox>
                         </Border>
@@ -97,6 +171,7 @@
                                   HorizontalScrollBarVisibility="Auto"
                                   VerticalScrollBarVisibility="Auto">
                                 <DataGrid Name="purchasesDataGrid"
+                                      IsReadOnly="True"
                                       Margin="6,0,6,0"
                                       MaxColumnWidth="200"
                                       HorizontalAlignment="Stretch"
