--- a/LeposWPF/UI/AccountStatus.xaml
+++ b/LeposWPF/UI/AccountStatus.xaml
@@ -9,7 +9,7 @@
                       xmlns:sys="clr-namespace:System;assembly=mscorlib"
                       xmlns:toolkit="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Input.Toolkit"
                       xmlns:vsm="clr-namespace:System.Windows;assembly=WPFToolkit"
-                      Title="Estado de cuenta"
+                      Title="Estado de cuenta : "
                       Width="1150"
                       Height="768"
                       FontSize="16"
@@ -30,17 +30,73 @@
                   Text="Ingresar ID" />
             </VisualBrush.Visual>
         </VisualBrush>
+        <!--  Alert Fade Animation  -->
+        <Storyboard x:Key="animate">
 
+            <DoubleAnimation Duration="0:0:3.5"
+                             From="1"
+                             Storyboard.TargetProperty="Opacity"
+                             To="0" />
+        </Storyboard>
+        <DataTemplate x:Key="ViewCellTemplate">
+            <TextBlock Name="viewTextBlock" Tag="{Binding Path=ID}" Text="Ver" MouseDown="viewTextBlock_MouseDown" />
+        </DataTemplate>
+        <DataTemplate x:Key="ViewEditingCellTemplate">
+            <TextBlock Name="viewTextBlock" Tag="{Binding Path=ID}" Text="Ver" MouseDown="viewTextBlock_MouseDown" />
+        </DataTemplate>
+        <DataTemplate x:Key="DateCellTemplate">
+            <TextBlock TextAlignment="Center" Text="{Binding Path=Date, StringFormat=d}"></TextBlock>
+        </DataTemplate>
+
+        <DataTemplate x:Key="DateCellEditingTemplate">
+            <TextBlock TextAlignment="Center" Text="{Binding Path=Date, StringFormat=c}"></TextBlock>
+        </DataTemplate>
+        <DataTemplate x:Key="PayDateCellTemplate">
+            <TextBlock TextAlignment="Center" Text="{Binding Path=PayDate, StringFormat=d}"></TextBlock>
+        </DataTemplate>
+
+        <DataTemplate x:Key="PayDateCellEditingTemplate">
+            <TextBlock TextAlignment="Center" Text="{Binding Path=PayDate, StringFormat=c}"></TextBlock>
+        </DataTemplate>
+        <DataTemplate x:Key="PayCellTemplate">
+            <TextBlock Tag="{Binding Path=ID}" Text="Abonar" MouseDown="payTextBlock_MouseDown" />
+        </DataTemplate>
+
+        <DataTemplate x:Key="PayCellEditingTemplate">
+            <TextBlock Tag="{Binding Path=ID}" Text="Abonar" MouseDown="payTextBlock_MouseDown" />
+        </DataTemplate>
+
+        <DataTemplate x:Key="TotalCellTemplate">
+            <TextBlock Text="{Binding Path=Total, StringFormat=c}"></TextBlock>
+        </DataTemplate>
+
+        <DataTemplate x:Key="TotalCellEditingTemplate">
+            <TextBlock Text="{Binding Path=Total, StringFormat=c}"></TextBlock>
+        </DataTemplate>
+        <DataTemplate x:Key="PaymentsCellTemplate">
+            <TextBlock Text="{Binding Path=Payments, StringFormat=c}"></TextBlock>
+        </DataTemplate>
+
+        <DataTemplate x:Key="PaymentsDCellEditingTemplate">
+            <TextBlock Text="{Binding Path=Payments, StringFormat=c}"></TextBlock>
+        </DataTemplate>
+        <DataTemplate x:Key="Provider_IDCellTemplate">
+            <TextBlock Text="{Binding Path=Provider.Name}"></TextBlock>
+        </DataTemplate>
+
+        <DataTemplate x:Key="Provider_IDCellEditingTemplate">
+            <TextBlock Text="{Binding Path=Provider.Name}"></TextBlock>
+        </DataTemplate>
     </Window.Resources>
     <Grid  >
         <Grid.RowDefinitions>
-            <RowDefinition Height="14*" />
-            <RowDefinition Height="76*"/>
-            <RowDefinition Height="10*" />
+            <RowDefinition Height="20*" />
+            <RowDefinition Height="73*"/>
+            <RowDefinition Height="7*" />
         </Grid.RowDefinitions>
         <Viewbox HorizontalAlignment="Left" VerticalAlignment="Stretch">
             <Border HorizontalAlignment="Stretch"  VerticalAlignment="Stretch" Margin="2,0,2,0" Grid.Row="0" Grid.ColumnSpan="2" BorderBrush="Gray" BorderThickness="0,0,0,0">
-                <GroupBox Header="Filtrar estado de cuenta"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                <GroupBox Header="Filtrar estado de cuenta : " Name="gridGroupBox"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                     <Grid Name="groupBoxGrid"  HorizontalAlignment="Stretch">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="3*"></ColumnDefinition>
@@ -51,17 +107,18 @@
                         <Grid.RowDefinitions>
                             <RowDefinition></RowDefinition>
                             <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
                         </Grid.RowDefinitions>
                         <Image Name="logoImage"
                                Grid.Column="3"
-                               Grid.RowSpan="2"
+                               Grid.RowSpan="4"
                                Margin="20"
                                Height="80"
                                ToolTip="Logo" 
                                Source="/Lepos;component/LocalResources/default_logo.png" />
                         <StackPanel Grid.Row="0" Grid.ColumnSpan="3" Orientation="Vertical">
                             <StackPanel Margin="10,0,0,0" Orientation="Horizontal">
-                                <TextBox Name="saleIDTextBox" Height="30"  Width="100">
+                                <TextBox Name="saleIDTextBox" Height="30"  Width="200">
                                     <TextBox.Style>
                                         <Style TargetType="TextBox">
                                             <Style.Triggers>
@@ -81,7 +138,7 @@
                                     </TextBox.Style>
 
                                 </TextBox>
-                                <Button Name="saleIDButton" Click="saleIDButton_Click" Margin="10,0,0,0">
+                                <Button Name="saleIDButton" Click="saleIDButton_Click" Margin="10,0,0,0" Width="285">
                                     <StackPanel Orientation="Horizontal">
                                         <fa:ImageAwesome Style="{StaticResource styleImageAwesome}" Icon="Search" />
                                         <fa:FontAwesome Style="{StaticResource styleFontAwesome}" Text="Filtrar por ID" />
@@ -101,8 +158,17 @@
                                 </Button>
                             </StackPanel>
                         </StackPanel>
-                        <TextBlock Margin="6,10,6,0" Grid.Column="1" Grid.Row="1" Background="Yellow" Foreground="Gray">Fecha próxima de pago</TextBlock>
-                        <TextBlock Margin="6,10,6,0" Grid.Column="2" Grid.Row="1" Background="Red" Foreground="Black" >Fecha expirada de pago</TextBlock>
+                        <TextBlock Margin="6,10,6,0" Grid.Column="0" Grid.Row="1" Background="Green" Foreground="White">Fecha próxima de pago</TextBlock>
+                        <TextBlock Margin="6,10,6,0" Grid.Column="1" Grid.Row="1" Background="Red" Foreground="White" >Fecha expirada de pago</TextBlock>
+                        <StackPanel Orientation ="Vertical" Grid.Row="2" Grid.ColumnSpan="2">
+                            <TextBlock FontSize="22" Foreground="Red" IsEnabled="False" TextWrapping="Wrap" Name="alertTextBlock" HorizontalAlignment="Stretch" />
+                            <ProgressBar Name="loadingProgressBar"
+                                             Margin="5"
+                                             HorizontalAlignment="Stretch"
+                                             VerticalAlignment="Stretch"
+                                             IsIndeterminate="False"
+                                             />
+                        </StackPanel>
                     </Grid>
                 </GroupBox>
             </Border>
@@ -112,11 +178,15 @@
                 <ScrollViewer 
                                   HorizontalScrollBarVisibility="Auto"
                                   VerticalScrollBarVisibility="Auto">
-                    <DataGrid Name="debtsDataGrid"
-                                      Margin="6,0,6,0"
-                                      MaxColumnWidth="200"
-                                      HorizontalAlignment="Stretch"
-                                      VerticalAlignment="Stretch">
+                    <DataGrid
+                            LoadingRow="debtsDataGrid_LoadingRow"
+                            IsReadOnly="True"
+                            Name="debtsDataGrid"
+                            CanUserAddRows="False"
+                            Margin="6,0,6,0"
+                            MaxColumnWidth="200"
+                            HorizontalAlignment="Stretch"
+                            VerticalAlignment="Stretch">
                     </DataGrid>
                 </ScrollViewer>
             </Border>
