--- a/LeposWPF/UI/SalesPeriodNote.xaml
+++ b/LeposWPF/UI/SalesPeriodNote.xaml
@@ -55,14 +55,21 @@
                             Icon="StickyNote" />
                         <TextBlock Name="periodTextBlock" Margin="5,0,5,0" FontSize="24"  Foreground="Gray" />
                     </DockPanel>
-                    <ProgressBar Grid.Row="1" Grid.Column="0" Name="loadingProgressBar"
-                             Margin="5"
-                             HorizontalAlignment="Stretch"
-                             VerticalAlignment="Stretch"
-                             IsIndeterminate="False"
+                    <StackPanel Orientation="Vertical" Grid.Row="1">
+                        <TextBlock FontSize="22" 
+                                   Foreground="Red" 
+                                   IsEnabled="False" 
+                                   TextWrapping="Wrap" 
+                                   Name="alertTextBlock" 
+                                   HorizontalAlignment="Stretch" />
+                        <ProgressBar Name="loadingProgressBar"
+                                     Margin="5"
+                                     HorizontalAlignment="Stretch"
+                                     VerticalAlignment="Stretch"
+                                     IsIndeterminate="False"
                              />
-                    <TextBlock FontSize="18" Foreground="Red" IsEnabled="False" TextWrapping="Wrap" Grid.Row="1" Grid.Column="1" Name="alertTextBox" HorizontalAlignment="Stretch" />
-                    <Image Name="logoImage"
+                    </StackPanel>
+                        <Image Name="logoImage"
                            Grid.Column="2"
                            Grid.RowSpan="2"
                            Margin="20"
@@ -79,7 +86,7 @@
                           BorderBrush="Gray"
                           BorderThickness="2"
                           Margin="6,0,6,0"
-                          MaxColumnWidth="200"
+                          ColumnWidth="Auto"
                           HorizontalAlignment="Stretch"
                           VerticalAlignment="Stretch"/>
         </Viewbox>
@@ -87,10 +94,10 @@
             <Border Margin="2,2,2,2" BorderBrush="Gray" BorderThickness="0 0 0 0">
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Name="salesTotalTextBlock" HorizontalAlignment="Stretch" FontSize="28" TextWrapping="Wrap" Foreground="Gray">Ventas : $25,000.00</TextBlock>
-                    <Button Margin="20,4,0,4">
+                    <Button Margin="20,4,0,4" Click="exportExcelButton_Click">
                         <StackPanel Orientation="Horizontal">
-                            <fa:ImageAwesome Icon="FileWordOutline" Style="{StaticResource styleImageAwesome}" />
-                            <fa:FontAwesome  Style="{StaticResource styleFontAwesome}" Text="Exportar a Word" />
+                            <fa:ImageAwesome Icon="FileExcelOutline" Style="{StaticResource styleImageAwesome}" />
+                            <fa:FontAwesome  Style="{StaticResource styleFontAwesome}" Text="Exportar a Excel" />
                         </StackPanel>
                     </Button>
                 </StackPanel>
